module(
    name = "msft_proxy4",
    version = "4.0.2",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "rules_python", version = "1.7.0")

