load("@rules_cc//cc:defs.bzl", "cc_test")
load("//:copts.bzl", "PROXY_BUILD_COPTS")
load("@doc_examples//:doc_examples.bzl", "DOC_EXAMPLES")

package(default_visibility = ["//visibility:private"])

# One genrule per example: depends only on its own .md file, so editing one
# doc rebuilds only that example.
[
    genrule(
        name = "extract_example_" + md[:-3].replace("/", "_"),
        srcs = [md],
        outs = ["example_" + md[:-3].replace("/", "_") + ".cpp"],
        cmd = "python3 $(location //tools:extract_example_code.py) $(SRCS) $(OUTS)",
        cmd_bat = "py $(location //tools:extract_example_code.py) $(SRCS) $(OUTS)",
        tools = ["//tools:extract_example_code.py"],
    )
    for md in DOC_EXAMPLES
]

[
    cc_test(
        name = "example_" + md[:-3].replace("/", "_"),
        srcs = ["example_" + md[:-3].replace("/", "_") + ".cpp"],
        copts = PROXY_BUILD_COPTS,
        deps = ["//:proxy"] + deps,
    )
    for md, deps in DOC_EXAMPLES.items()
]
