load("@rules_cc//cc:defs.bzl", "cc_test")
load("//:proxy_bazel_copts.bzl", "PROXY_COMMON_COPTS")

package(default_visibility = ["//visibility:public"])

PROXY_GTEST_SYSTEM_COPTS = select({
    "@bazel_tools//src/conditions:windows": [
        "/external:Iexternal/googletest+/googletest/include",
        "/external:Iexternal/googletest+/googlemock/include",
    ],
    "//conditions:default": [
        "-isystem",
        "external/googletest+/googletest/include",
        "-isystem",
        "external/googletest+/googlemock/include",
    ],
})

PROXY_COPTS = PROXY_COMMON_COPTS + PROXY_GTEST_SYSTEM_COPTS

cc_test(
    name = "proxy_tests",
    size = "small",
    srcs = [
        "proxy_creation_tests.cpp",
        "proxy_details_tests.cpp",
        "proxy_dispatch_tests.cpp",
        "proxy_format_tests.cpp",
        "proxy_integration_tests.cpp",
        "proxy_invocation_tests.cpp",
        "proxy_lifetime_tests.cpp",
        "proxy_reflection_tests.cpp",
        "proxy_regression_tests.cpp",
        "proxy_rtti_tests.cpp",
        "proxy_traits_tests.cpp",
        "proxy_view_tests.cpp",
        "utils.h",
    ],
    copts = PROXY_COPTS,
    includes = ["."],
    deps = [
        "//:proxy",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "proxy_fmt_tests",
    size = "small",
    srcs = [
        "proxy_fmt_format_no_wchar_tests.cpp",
        "proxy_fmt_format_tests.cpp",
    ],
    copts = PROXY_COPTS,
    deps = [
        "//:proxy",
        "@fmt//:fmt",
        "@googletest//:gtest_main",
    ],
)

test_suite(
    name = "proxy_test_suite",
    tests = [
        ":proxy_tests",
        ":proxy_fmt_tests",
    ],
)
